--- a/ui/src/assets/main.css
+++ b/ui/src/assets/main.css
@@ -1,4 +1,4 @@
-@import './base.css';
+@import "./base.css";
 
 #app {
   font-weight: normal;
@@ -11,8 +11,8 @@
 }
 
 a {
-  padding: .5rem;
-  border-radius: .375rem;
+  padding: 0.5rem;
+  border-radius: 0.375rem;
 }
 
 a,
