--- a/ui/src/assets/main.css
+++ b/ui/src/assets/main.css
@@ -11,12 +11,14 @@
 }
 
 .sign-up-item,
+.menu-item,
 .return {
   padding: 0.5rem;
   border-radius: 0.375rem;
 }
 
 .sign-up-item,
+.menu-item,
 .return,
 .text-accent {
   text-decoration: none;
@@ -26,6 +28,7 @@
 
 @media (hover: hover) {
   .sign-up-item:hover,
+  .menu-item:hover,
   .return:hover {
     background-color: var(--color-accent-mute);
   }
